--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -13,6 +13,28 @@
   <body data-bs-theme="dark">
     <h1>Clientes</h1>
 
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Rut</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Apellidos</th>
+          <th scope="col">Telefonos</th>
+          <th scope="col">Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for datos in clientes %}
+        <tr>
+          <th scope="row">{{datos.rut}}</th>
+          <td>{{datos.nombre}}</td>
+          <td>{{datos.apellidos}}</td>
+          <td>{{datos.fono_1}} - {{fono_2}}</td>
+          <td>{{datos.email}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>    
+    </table>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
