--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -1,45 +1,233 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load static %}
 <html lang="es">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 
     <title>Catálogo clientes</title>
   </head>
   <body data-bs-theme="dark">
-    <div class="container">
-      <h1>Clientes</h1>
+    <div class="container-fluid m-0 p-0">
+      <div class="row">
+        <div class="col-xl-1 col-md-2 fixed-top col-12 d-inline-block m-0 p-0">
+          <nav class="navbar navbar-expand-md bg-body-tertiary h-100">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse vh-100 sticky-md-top" id="navbarNav">
+                <ul class="nav nav-pills flex-column w-100">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+        <div class="ms-auto col-xl-11 col-md-10 col-12">
+          <div class="container m-0 p-0">
+            <h1>Clientes</h1>
 
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th scope="col"><h4>Rut</h4></th>
-            <th scope="col"><h4>Nombre</h4></th>
-            <th scope="col"><h4>Apellidos</h4></th>
-            <th scope="col"><h4>Telefonos</h4></th>
-            <th scope="col"><h4>Email</h4></th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for datos in clientes %}
-          <tr class="align-middle">
-            <th scope="row">{{datos.rut}}</th>
-            <td class="text-capitalize">{{datos.nombre}}</td>
-            <td class="text-capitalize">{{datos.apellidos}}</td>
-            <td>+56 {{datos.fono_1}}{% if datos.fono_2 %}<br>+56 {{datos.fono_2}} {% endif %}</td>
-            <td>{{datos.email}}</td>
-          </tr>
-          {% endfor %}
-        </tbody>    
-      </table>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th scope="col"><h4>Rut</h4></th>
+                  <th scope="col"><h4>Nombre</h4></th>
+                  <th scope="col"><h4>Apellidos</h4></th>
+                  <th scope="col"><h4>Telefonos</h4></th>
+                  <th scope="col"><h4>Email</h4></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+                {% for datos in clientes %}
+                <tr class="align-middle">
+                  <th scope="row">{{datos.rut}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.apellidos}}</td>
+                  <td>
+                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                    {{datos.fono_2}} {% endif %}
+                  </td>
+                  <td>{{datos.email}}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   </body>
 </html>
