--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -3,14 +3,9 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-
     <title>Catálogo clientes</title>
   </head>
   <body data-bs-theme="dark">
@@ -38,7 +33,7 @@
             </div>
           </nav>
         </div>
-        <div class="ms-auto col-xl-11 col-md-10 col-12">
+        <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
           <div class="container m-0 p-0">
             <h1>Clientes</h1>
 
@@ -50,176 +45,35 @@
                   <th scope="col"><h4>Apellidos</h4></th>
                   <th scope="col"><h4>Telefonos</h4></th>
                   <th scope="col"><h4>Email</h4></th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
-                {% endfor %}
-                {% for datos in clientes %}
-                <tr class="align-middle">
-                  <th scope="row">{{datos.rut}}</th>
-                  <td class="text-capitalize">{{datos.nombre}}</td>
-                  <td class="text-capitalize">{{datos.apellidos}}</td>
-                  <td>
-                    +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                    {{datos.fono_2}} {% endif %}
-                  </td>
-                  <td>{{datos.email}}</td>
-                </tr>
+                {% for i in '0123456789'|make_list %}
+                  {% for datos in clientes %}
+                  <tr class="align-middle">
+                    <th scope="row">{{datos.rut}}</th>
+                    <td class="text-capitalize">{{datos.nombre}}</td>
+                    <td class="text-capitalize">{{datos.apellidos}}</td>
+                    <td>
+                      +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
+                      {{datos.fono_2}} {% endif %}
+                    </td>
+                    <td>{{datos.email}}</td>
+                    <td>
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
+                          ⋮
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                          <li><button class="dropdown-item" type="button">Action</button></li>
+                          <li><button class="dropdown-item" type="button">Another action</button></li>
+                          <li><button class="dropdown-item" type="button">Something else here</button></li>
+                        </ul>
+                      </div>
+                    </td>
+                  </tr>
+                  {% endfor %}
                 {% endfor %}
               </tbody>
             </table>
@@ -227,7 +81,6 @@
         </div>
       </div>
     </div>
-    <!-- Optional JavaScript -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   </body>
 </html>
