--- a/templates/veterinaria/mascotas.html
+++ b/templates/veterinaria/mascotas.html
@@ -1,21 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load static %}
 <html lang="es">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 
-    <title>Catalogo mascotas</title>
+    <title>Catálogo mascotas</title>
   </head>
   <body data-bs-theme="dark">
-    <h1>Clinica</h1>
+    <div class="container-fluid m-0 p-0">
+      <div class="row">
+        <div class="col-xl-1 col-md-2 fixed-top col-12 d-inline-block m-0 p-0">
+          <nav class="navbar navbar-expand-md bg-body-tertiary h-100">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse vh-100 sticky-md-top" id="navbarNav">
+                <ul class="nav nav-pills flex-column w-100">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+        <div class="ms-auto col-xl-11 col-md-10 col-12">
+          <div class="container m-0 p-0">
+            <h1>Clientes</h1>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th scope="col"><h4>Dueño</h4></th>
+                  <th scope="col"><h4>Nombre</h4></th>
+                  <th scope="col"><h4>Sexo</h4></th>
+                  <th scope="col"><h4>Edad (Meses)</h4></th>
+                  <th scope="col"><h4>N° Chip</h4></th>
+                  <th scope="col"><h4>Raza</h4></th>
+                  <th scope="col"><h4>Especie</h4></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for datos in mascotas %}
+                <tr class="align-middle">
+                  <th scope="row">{{clientes[datos.dueno]}}</th>
+                  <td class="text-capitalize">{{datos.nombre}}</td>
+                  <td class="text-capitalize">{{datos.sexo}}</td>
+                  <td>{{datos.edad_meses}}</td>
+                  <td>{{datos.num_chip}}</td>
+                  <td>{{datos.raza}}</td>
+                  <td>{{datos.especie}}</td>
 
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   </body>
 </html>
