--- a/templates/veterinaria/mascotas.html
+++ b/templates/veterinaria/mascotas.html
@@ -40,7 +40,7 @@
         </div>
         <div class="ms-auto col-xl-11 col-md-10 col-12">
           <div class="container m-0 p-0">
-            <h1>Clientes</h1>
+            <h1>Mascotas</h1>
             <table class="table table-striped table-hover">
               <thead>
                 <tr>
@@ -51,19 +51,31 @@
                   <th scope="col"><h4>N° Chip</h4></th>
                   <th scope="col"><h4>Raza</h4></th>
                   <th scope="col"><h4>Especie</h4></th>
+                  <th scope="col"></th>
+
                 </tr>
               </thead>
               <tbody>
                 {% for datos in mascotas %}
                 <tr class="align-middle">
-                  <th scope="row">{{clientes[datos.dueno]}}</th>
+                  <th scope="row" class="text-capitalize">{{datos.dueno.nombre}}</th>
                   <td class="text-capitalize">{{datos.nombre}}</td>
                   <td class="text-capitalize">{{datos.sexo}}</td>
                   <td>{{datos.edad_meses}}</td>
                   <td>{{datos.num_chip}}</td>
-                  <td>{{datos.raza}}</td>
-                  <td>{{datos.especie}}</td>
-
+                  <td class="text-capitalize">{{datos.raza.nombre_raza}}</td>
+                  <td class="text-capitalize">{{datos.raza.especie}}</td>
+                  <td>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
+                        ⋮
+                      </button>
+                      <ul class="dropdown-menu dropdown-menu-end">
+                        <li><button class="dropdown-item" type="button">Editar Datos Mascota</button></li>
+                        <li><button class="dropdown-item" type="button">Ver dueño</button></li>
+                      </ul>
+                    </div>
+                  </td>
                 </tr>
                 {% endfor %}
               </tbody>
