--- a/templates/veterinaria/atenciones.html
+++ b/templates/veterinaria/atenciones.html
@@ -23,13 +23,13 @@
                     <a class="nav-link" href="{% url 'inicio' %}">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'clientes' %}">Clientes</a>
+                    <a class="nav-link" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'inicio' %}">Mascotas</a>
+                    <a class="nav-link" href="{% url 'mascotas' %}">Mascotas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'inicio' %}">Atenciones</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'atenciones' %}">Atenciones</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'inicio' %}">Razas</a>
@@ -46,66 +46,60 @@
             <table class="table table-striped table-hover">
               <thead>
                 <tr>
-                  <th scope="col"><h4>Rut</h4></th>
-                  <th scope="col"><h4>Nombre</h4></th>
-                  <th scope="col"><h4>Apellidos</h4></th>
-                  <th scope="col"><h4>Telefonos</h4></th>
-                  <th scope="col"><h4>Email</h4></th>
+                  <th scope="col"><h4>Codigo</h4></th>
+                  <th scope="col"><h4>Fecha</h4></th>
+                  <th scope="col"><h4>Veterinario</h4></th>
+                  <th scope="col"><h4>Hora</h4></th>
+                  <th scope="col"><h4>Mascota</h4></th>
                   <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
-                {% for i in '0123456789'|make_list %}
-                  {% for datos in clientes %}
+                  {% for atencion in atenciones %}
                   <tr class="align-middle">
-                    <th scope="row">{{datos.rut}}</th>
-                    <td class="text-capitalize">{{datos.nombre}}</td>
-                    <td class="text-capitalize">{{datos.apellidos}}</td>
+                    <th scope="row">{{atencion.cod_atencion}}</th>
+                    <td>{{atencion.fecha_atencion}}</td>
+                    <td class="text-capitalize">{{atencion.veterinario}}</td>
                     <td>
-                      +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                      {{datos.fono_2}} {% endif %}
+                      Inicio: {{atencion.hora_inicio}}<br />
+                      Termino: {{atencion.hora_termino}}
                     </td>
-                    <td>{{datos.email}}</td>
+                    <td class="text-capitalize">{{atencion.mascota_atendida.nombre}}</td>
                     <td>
                       <div class="btn-group">
                         <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
                           ⋮
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                          <li><a class="dropdown-item" type="button">Editar Datos Cliente</a></li>
-                          <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#mascotas{{datos.rut}}">Ver Mascotas</a></li>
-                          <li><a class="dropdown-item" type="button">Deshabilitar Cliente</a></li>
+                          <li><a class="dropdown-item" type="button">Editar Atención</a></li>
+                          <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#atencion{{atencion.cod_atencion}}">Ver Detalles</a></li>
+                          <li><a class="dropdown-item" type="button">Eliminar Atención</a></li>
                         </ul>
                       </div>
                     </td>
                   </tr>
-                  <div class="modal fade" id="mascotas{{datos.rut}}" tabindex="-1" aria-labelledby="ModalLabel{{datos.rut}}" aria-hidden="true">
+                  <div class="modal fade" id="atencion{{atencion.cod_atencion}}" tabindex="-1" aria-labelledby="ModalLabel{{atencion.cod_atencion}}" aria-hidden="true">
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h1 class="modal-title fs-5" id="ModalLabel{{datos.rut}}">Mascotas Cliente {{datos.rut}}</h1>
+                          <h1 class="modal-title fs-5" id="ModalLabel{{atencion.cod_atencion}}">Atención {{atencion.cod_atencion}}</h1>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        {% for mascota in mascotas %}
-                        {% if mascota.dueno.rut == datos.rut %}
                         <div class="modal-body">
                           <div class="card" style="width: 18rem;">
-                            <img src="{% static 'images/'|add:mascota.nombre|add:'.jpg' %}" class="card-img-top" alt="...">
+                            <img src="" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title text-capitalize">{{mascota.nombre}}</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Masculino{% else %}Femenino{% endif %}</h6>
-                              <p class="card-text text-capitalize">{{mascota.num_chip}} - {{mascota.raza.nombre_raza}} - {{mascota.raza.especie}}</p>
+                              <h5 class="card-title text-capitalize">ASD</h5>
+                              <h6 class="card-subtitle mb-2 text-body-secondary">asd</h6>
+                              <p class="card-text text-capitalize">asd</p>
                               <a href="#" class="btn btn-primary">Detalles mascota</a>
                             </div>
                           </div>
                         </div>
-                        {% endif %}
-                        {% endfor %}
                       </div>
                     </div>
                   </div>                  
                   {% endfor %}
-                {% endfor %}
               </tbody>
             </table>
           </div>
