--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -26,7 +26,10 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'inicio' %}">Mascotas</a>
+                    <a class="nav-link" href="{% url 'mascotas' %}">Mascotas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'atenciones' %}">Atenciones</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'inicio' %}">Razas</a>
