--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -177,7 +177,7 @@
                           <div class="card" style="width: 18rem;">
                             <img src="../../{{mascota.url_imagen}}" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title text-capitalize">{{mascota.nombre}}</h5>
+                              <h5 class="card-title text-capitalize">{{mascota.nombres}}</h5>
                               <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Macho{% else %}Hembra{% endif %}</h6>
                               <p class="card-text text-capitalize">{{mascota.num_chip}} - {{mascota.id_raza.nombre_raza}} - {{mascota.id_raza.nombre_especie}}</p>
                               <a href="#" class="btn btn-primary">Detalles mascota</a>
